--- a/backend/package.json
+++ b/backend/package.json
@@ -17,12 +17,14 @@
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
     "express": "^4.18.2",
+    "express-fileupload": "^1.4.0",
     "helmet": "^6.0.0",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
     "mysql": "^2.18.1",
     "nodemon": "^2.0.20",
+    "path": "^0.12.7",
     "util": "^0.12.5"
   },
   "type": "module"
