--- a/backend/package.json
+++ b/backend/package.json
@@ -25,6 +25,7 @@
     "mysql": "^2.18.1",
     "nodemon": "^2.0.20",
     "path": "^0.12.7",
+    "socket.io": "^4.6.1",
     "util": "^0.12.5"
   },
   "type": "module"
