--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,6 +31,7 @@
     "devextreme-schematics": "^1.5.1",
     "lodash": "^4.17.21",
     "ngx-cookie-service": "^14.0.0",
+    "ngx-socket-io": "^4.3.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
